# zerolog

./: .editorconfig  .pre-commit-config.yaml  Makefile  Pipfile  README.md  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: test.yaml
tests/: test_console.py  test_hook.py  test_json.py  test_logger.py  test_sampler.py
zerolog/: __init__.py  _globals.py  console.py  constants.py  context.py  encoder.py  encoder_json.py  event.py  hook.py  level.py  logger.py  sampler.py  stacktrace.py  time.py
zerolog/internal/json/: __init__.py  base.py  json.py
zerolog/internal/util/: atomic.py  time.py
zerolog/log/: __init__.py  log.py
