[metadata]
name = zerolog
version = file: VERSION
author = Alexandre Ferland
author_email = me@alexferl.com
url = https://github.com/alexferl/zerolog
description = Zero setup JSON logger
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3.11
  Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.11
